# neve-transformer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.sh  specification.md
Source/: Main.cpp
Source/DSP/: BiquadFilter.cpp  BiquadFilter.h  DynamicAllpass.cpp  DynamicAllpass.h  Neve8026PhaseEngine.h  NeveTransformerDSP.cpp  NeveTransformerDSP.h  Oversampler.cpp  Oversampler.h  Waveshaper.cpp  Waveshaper.h
Source/UI/: MainComponent.cpp  MainComponent.h  MainComponent_additions.txt  NeveLookAndFeel.h  PresetManager.h
